--- a/package.json
+++ b/package.json
@@ -11,12 +11,10 @@
   "devDependencies": {
     "gulp": "^4.0.2",
     "gulp-sass": "^4.1.0",
-    "node-sass": "^5.0.0"
-  },
-  "dependencies": {
+    "node-sass": "^5.0.0",
     "browser-sync": "^2.26.13",
     "cssnano": "^4.1.10",
     "gulp-postcss": "^9.0.0",
     "gulp-terser": "^2.0.1"
-  }
+  },
 }
